Realized site-title on pages other than homepage were wrapped in p element instead of h1, so corrected letter spacing to keep margins and overall look consistent across pages.

--- a/sass/typography/_headings.scss
+++ b/sass/typography/_headings.scss
@@ -31,6 +31,7 @@ h6 {
 .site-title {
 	font-family: $font__logo;
 	width: 14.06rem; /*  225 / 16 -- minus .0025 */
+	letter-spacing: 0.0625rem; /*  1 / 16  */
 	margin: 0.625rem 1rem 0.3125rem 0; /*  10 / 16 = 0.625,  5 / 16 = 0.3125, 1.5em is from rest of site margin, but only looked right at 1 */
 	
 	/*  400 / 16 = 25  */
@@ -71,7 +72,7 @@ h6 {
 	.main-navigation {
 		margin-left: 5%;
 	}
-	
+
 	.site-title,
 	.site-description {
 		margin-right: 7%;
